--- a/index-production.html
+++ b/index-production.html
@@ -10,7 +10,7 @@
         <script defer src="javascript/fontawesome-all.min.js"></script>
     </head>
     <body>
-        <div id="example"></div>
+        <div id="theApp"></div>
 
         <!-- Dependencies -->
 
