simple logo swap done

--- a/index-production.html
+++ b/index-production.html
@@ -46,7 +46,7 @@
             }
           },
           "content": {
-            "href": "https://slock.it/cookie-policy/"
+            "href": "https://blockchains.com/cookie-policy/"
           }
         });
         </script>
