--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             }
           },
           "content": {
-            "href": "https://slock.it/cookie-policy/"
+            "href": "https://blockchains.com/cookie-policy/"
           }
         });
         </script>
